# cloud_clipboard

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt  start.sh
app/: README.md
app_clipboard/: models.py  serializers.py  urls.py  views.py
app_clipboard/migrations/: 0001_initial.py  0002_rename_shared_id_clipboard_share_id_and_more.py
app_user/: urls.py
backend/: README.md  manage.py  start.bat
backend/app_clipboard/: apps.py  permissions.py
backend/app_user/: serializers.py
backend/cloud_clipboard/: urls.py  wsgi.py
cloud_clipboard/: asgi.py  settings.py  urls.py
web/: README.md  package-lock.json
